2010-10-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	mingw-get-0.1-mingw32-alpha-5 released.

	* configure.ac: Bump version to 0.1-alpha-5.
	* README: Update release notes accordingly.
	* All files (r0-1-alpha-5): Tag assigned.

2010-10-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make pkgInitRites/pkgLastRites processing more robust;
	avoid a potential race condition in mingw-get-inst.

	* src/rites.c: Refactor conditional code to segregate execution of...
	[defined IMPLEMENT_INITIATION_RITES]: ...this into distinct phases.
	(PHASE_ONE_RITES, PHASE_TWO_RITES): Define constants to identify them.
	(do_init_rites): Renamed to...
	(invoke_rites): ...this; inline it.
	(pkgLastRites): Invoke it, to pre-empt rename action of...
	(lastrites.exe): ...this, subsequently exec()ed process.
	(perror): Issue more informative diagnostic on exec() failure.

	* src/clistub.c (IMPLEMENT_INITIATION_RITES): Stipulate as...
	(PHASE_ONE_RITES): ...this phase of implementation only.

	* src/pkgexec.cpp (IMPLEMENT_INITIATION_RITES): Define to provide...
	(PHASE_TWO_RITES): ...this phase of implementation, facilitated by...
	(self_upgrade_rites): ...this locally defined RITES_INLINE function.
	(pkgActionItem::Execute): Invoke it, in remove/install loop, while...
	[init_rites_pending]: ...new loop local variable remains true.

2010-09-10  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Fix packaging bug in -lic package.

	* Makefile.in (licdist): Use directory named
	"share", not "shared".

2010-09-10  Charles Wilson  <mingw@cwilson.fastmail.fm>

	mingw-get-0.1-mingw32-alpha-4 released.

	* All files (r0-1-alpha-4): Tag assigned.

2010-09-10  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Add rudimentary help option.

	* README: Update release notes.

	* src/clistub.c: Add --help option.

2010-09-10  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Fix "mingw-get deletes itself" bug in last rites handling.

	* README: Add new release notes.
